Edit button is wrapped and located correctly

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -85,6 +85,12 @@ width: 60%;
   margin-left: 15%;
 }
 
+.edit-button{
+    display: flex;
+    justify-content: right; 
+    text-decoration: none;
+}
+
 
 
 
